--- a/Pixabay/Support Files/Base.lproj/LaunchScreen.storyboard
+++ b/Pixabay/Support Files/Base.lproj/LaunchScreen.storyboard
@@ -30,19 +30,37 @@
                                     <constraint firstAttribute="width" secondItem="p76-MJ-0uv" secondAttribute="height" multiplier="1:1" id="Oea-Mf-Fr9"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pixabay" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJD-Hz-d2H">
-                                <rect key="frame" x="137.5" y="307" width="101.5" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJD-Hz-d2H">
+                                <rect key="frame" x="187.5" y="307" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="免费的高清图片" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cg-n6-Sdh">
+                                <rect key="frame" x="16" y="323" width="343" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发现我们慷慨的社区分享的1.1百万张图片和视屏" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8K-vj-fQ8">
+                                <rect key="frame" x="16" y="365.5" width="343" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.93798828125" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1cg-n6-Sdh" firstAttribute="top" secondItem="cJD-Hz-d2H" secondAttribute="bottom" constant="16" id="0BU-CJ-cvC"/>
                             <constraint firstItem="gQo-xa-Hc6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="1RS-5B-qj4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p76-MJ-0uv" secondAttribute="trailing" constant="100" id="4DE-2V-iYz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1cg-n6-Sdh" secondAttribute="trailing" constant="16" id="AEZ-30-max"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e8K-vj-fQ8" secondAttribute="trailing" constant="16" id="Jqw-2c-3El"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gQo-xa-Hc6" secondAttribute="bottom" constant="44" id="Km2-s5-7Ah"/>
+                            <constraint firstItem="1cg-n6-Sdh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="STV-cX-O4l"/>
+                            <constraint firstItem="e8K-vj-fQ8" firstAttribute="top" secondItem="1cg-n6-Sdh" secondAttribute="bottom" constant="16" id="Y9Q-rc-Bi7"/>
                             <constraint firstItem="cJD-Hz-d2H" firstAttribute="top" secondItem="p76-MJ-0uv" secondAttribute="bottom" constant="32" id="cqE-Es-g0b"/>
+                            <constraint firstItem="e8K-vj-fQ8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kHj-73-yFb"/>
                             <constraint firstItem="cJD-Hz-d2H" firstAttribute="centerX" secondItem="p76-MJ-0uv" secondAttribute="centerX" id="khP-Dm-gmc"/>
                             <constraint firstItem="p76-MJ-0uv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="oaA-Qd-yvO"/>
                             <constraint firstItem="p76-MJ-0uv" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tIw-zM-V8b"/>
