--- a/Pixabay/Support Files/Base.lproj/LaunchScreen.storyboard
+++ b/Pixabay/Support Files/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,8 +19,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YUQIANGCODER.COM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQo-xa-Hc6">
-                                <rect key="frame" x="80.5" y="597.5" width="215.5" height="25.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <rect key="frame" x="124" y="630.5" width="128" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -31,36 +31,27 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJD-Hz-d2H">
-                                <rect key="frame" x="187.5" y="307" width="0.0" height="0.0"/>
+                                <rect key="frame" x="187.5" y="275" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="免费的高清图片" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cg-n6-Sdh">
-                                <rect key="frame" x="16" y="323" width="343" height="26.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pixabay" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cg-n6-Sdh">
+                                <rect key="frame" x="16" y="291" width="343" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发现我们慷慨的社区分享的1.1百万张图片和视屏" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8K-vj-fQ8">
-                                <rect key="frame" x="16" y="365.5" width="343" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="0.046047896146774292" green="0.69516056776046753" blue="0.89540928602218628" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.93798828125" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1cg-n6-Sdh" firstAttribute="top" secondItem="cJD-Hz-d2H" secondAttribute="bottom" constant="16" id="0BU-CJ-cvC"/>
                             <constraint firstItem="gQo-xa-Hc6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="1RS-5B-qj4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p76-MJ-0uv" secondAttribute="trailing" constant="100" id="4DE-2V-iYz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1cg-n6-Sdh" secondAttribute="trailing" constant="16" id="AEZ-30-max"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e8K-vj-fQ8" secondAttribute="trailing" constant="16" id="Jqw-2c-3El"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gQo-xa-Hc6" secondAttribute="bottom" constant="44" id="Km2-s5-7Ah"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gQo-xa-Hc6" secondAttribute="bottom" constant="22" id="Km2-s5-7Ah"/>
                             <constraint firstItem="1cg-n6-Sdh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="STV-cX-O4l"/>
-                            <constraint firstItem="e8K-vj-fQ8" firstAttribute="top" secondItem="1cg-n6-Sdh" secondAttribute="bottom" constant="16" id="Y9Q-rc-Bi7"/>
-                            <constraint firstItem="cJD-Hz-d2H" firstAttribute="top" secondItem="p76-MJ-0uv" secondAttribute="bottom" constant="32" id="cqE-Es-g0b"/>
-                            <constraint firstItem="e8K-vj-fQ8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kHj-73-yFb"/>
+                            <constraint firstItem="cJD-Hz-d2H" firstAttribute="top" secondItem="p76-MJ-0uv" secondAttribute="bottom" id="cqE-Es-g0b"/>
                             <constraint firstItem="cJD-Hz-d2H" firstAttribute="centerX" secondItem="p76-MJ-0uv" secondAttribute="centerX" id="khP-Dm-gmc"/>
                             <constraint firstItem="p76-MJ-0uv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="oaA-Qd-yvO"/>
                             <constraint firstItem="p76-MJ-0uv" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tIw-zM-V8b"/>
@@ -75,6 +66,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchIcon" width="91" height="91"/>
+        <image name="launchIcon" width="341" height="341"/>
     </resources>
 </document>
